--- a/examples/config/config.json
+++ b/examples/config/config.json
@@ -1,13 +1,13 @@
 {
   "elasticsearch": {
     "server": {
-      "url": "http://es01:9200"
+      "url": "http://10.0.27.27:9200"
     },
     "client": {
       "tls_enabled": false
     }
   },
-  "distributed": true,
+  "distributed": false,
   "consul": {
     "consul_http_addr": "http://consul-gea:8500",
     "consul_lock_key": "go-elasticsearch-alerts/lock"
